01/03-hellov2-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellov2
  labels:
    app: hellov2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hellov2
  template:
    metadata:
      labels:
        app: hellov2
    spec:
      containers:
      - name: hellov2-app
        image: cdkbot/microbot-arm64:latest
        ports:
        - containerPort: 80
