01/04-hellov2-app-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellov2
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: hellov2
